fix(): Mini-Statements Overflow

--- a/src/routes/home/style.css
+++ b/src/routes/home/style.css
@@ -49,7 +49,15 @@
 .statements_container {
 	height: 42vh;
 	margin: 0 20px 0 20px;
-	overflow-y: scroll;
+	overflow-y: hidden;
+}
+
+.statements_container:hover {
+	overflow-y: auto;
+}
+
+.statements_container h2 {
+	margin: 10px;
 }
 
 .box {
